--- a/Contact.html
+++ b/Contact.html
@@ -40,7 +40,7 @@
               <a class="nav-link anavbar" href="/Team.html">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link anavbar muli" href="/Blog.html">Blog</a>
+              <a class="nav-link anavbar" href="/Blog.html">Blog</a>
             </li>
             <li>
               <a
