--- a/Home.html
+++ b/Home.html
@@ -54,38 +54,39 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid isi">
-      <div class="row justify-content-start">
-        <div class="col-2"></div>
-        <div class="col-4 col1">
-          <img
-            class="img-fluid"
-            src="/Asset/images/Group 16136@2x@2x.png"
-            alt=""
-          />
-        </div>
-        <div class="col-4 col2">
-          <p class="hithere muli">HI THERE!</p>
-          <div class="tlsan">
-            <span class="weare" style="color: #19345e">We are an</span>
-            <span class="weare" style="color: #f47522">Alterra Academy.</span>
+    <!-- nabar end -->
+    <div class="container-fluid isi py-5">
+      <div class="container">
+        <div class="container row justify-content-start align-items-center">
+          <div class="col-lg-4 col-md-6 col1 offset-lg-2">
+            <img
+              class="img-fluid mb-3"
+              src="/Asset/images/Group 16136@2x@2x.png"
+              alt=""
+            />
           </div>
-          <span class="dskripsialterra muli"
-            >Alterra Academy Full-stack Program is Coding Bootcamp which
-            transform you being professional Software Engineer within 3
-            months.</span
-          >
-          <div>
-            <a
-              class="btn buttonteam buttonteamimg muli"
-              href="/Team.html"
-              role="button"
+          <div class="col-lg-4 col-md-6 py-5 col2">
+            <p class="hithere muli">HI THERE!</p>
+            <div class="tlsan">
+              <span class="weare" style="color: #19345e">We are an</span>
+              <span class="weare" style="color: #f47522">Alterra Academy.</span>
+            </div>
+            <span class="dskripsialterra muli"
+              >Alterra Academy Full-stack Program is Coding Bootcamp which
+              transform you being professional Software Engineer within 3
+              months.</span
             >
-              More About Team</a
-            >
+            <div>
+              <a
+                class="btn buttonteam buttonteamimg my-3 muli"
+                href="/Team.html"
+                role="button"
+              >
+                More About Team</a
+              >
+            </div>
           </div>
         </div>
-        <div class="col-2"></div>
       </div>
     </div>
     <div class="row justify-content-center container-fluid">
@@ -155,21 +156,18 @@
       <div
         class="row d-flex justify-content-center align-items-center row-about"
       >
-        <div class="col-8 row">
-          <div class="col-3"></div>
-          <div class="col-6">
+        <div class="col-lg-8 col-md-10 col-sm-12 offset-md-1 row">
+          <div class="col-lg-6 col-md-8 col-sm-10 offset-lg-3 offset-md-2 offset-sm-1">
             <div class="row align-items-center fw-bold">
-              <div class="col-2"></div>
-              <div class="col-2">
+              <div class="col-lg-2 col-md-3 offset-lg-1 col-sm-3 offset-sm-1">
                 <div class="hr"></div>
               </div>
-              <div class="col-5 text-center weare muli">About</div>
-              <div class="col-2">
+              <div class="col-lg-6 col-md-4 col-sm-4 text-center weare muli">About</div>
+              <div class="col-lg-2 col-md-3 col-sm-3 offset-sm-1">
                 <div class="hr"></div>
               </div>
             </div>
           </div>
-          <div class="col-3"></div>
         </div>
       </div>
     </div>
@@ -180,8 +178,7 @@
             class="d-flex text-center align-items-center"
             style="height: 100%"
           >
-            <div class="col-3"></div>
-            <div class="col-6">
+            <div class="col-lg-6 col-md-10 offset-lg-3 offset-md-1">
               <div class="alterrais justify-content-center muli">
                 Alterra is For Everyone
               </div>
@@ -203,39 +200,35 @@
         class="row d-flex justify-content-center align-items-center row-meat"
       >
         <div class="col-8 row">
-          <div class="col-2"></div>
-          <div class="col-8">
+          <div class="col-lg-8 col-md-10 col-md-12 offset-lg-2 offset-md-1">
             <div class="row align-items-center fw-bold">
-              <div class="col-2">
+              <div class="col-lg-2 col-md-3 col-sm-3">
                 <div class="hr"></div>
               </div>
-              <div class="col-8 text-center weare muli">Meat Our Team</div>
-              <div class="col-2">
+              <div class="col-lg-8 col-md-6 col-sm-6 text-center weare muli">
+                Meat Our Team
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-3">
                 <div class="hr"></div>
               </div>
             </div>
           </div>
-          <div class="col-2"></div>
         </div>
       </div>
     </div>
     <div class="container">
-      <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-8 row">
-          <div class="col-2"></div>
-          <div class="col-8">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-8 text-center">
+          <div class="col-lg-8 col-sm-10 offset-lg-2 offset-md-1">
             <div class="row align-items-center">
-              <div class="col-2"></div>
               <div
-                class="col-8 text-center fw-bold"
+                class="col-lg-8 col-md-10 col-sm-12 offset-lg-2 col-md-2 offset-sm-1 fw-bold"
                 style="font-family: mulish"
               >
                 Our Team Consists Only of the Best Talents
               </div>
-              <div class="col-2"></div>
             </div>
           </div>
-          <div class="col-2"></div>
         </div>
       </div>
     </div>
@@ -245,7 +238,7 @@
         style="height: 50vh"
       >
         <div class="col-11 row" style="height: 50vh">
-          <div class="col-4 d-flex justify-content-center align-items-end">
+          <div class="col-4 d-flex justify-content-center pt-5">
             <div style="width: 18rem">
               <div class="justify-content-start">
                 <div class="kotak"></div>
@@ -283,7 +276,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4 d-flex justify-content-center align-items-end">
+          <div class="col-4 d-flex justify-content-center pt-5">
             <div style="width: 18rem">
               <div class="justify-content-start">
                 <div class="kotak3"></div>
@@ -304,39 +297,52 @@
             </div>
           </div>
         </div>
-        <div class="col-11 text-end">
-          <a class="checknow muli" href="/Team.html"> Check Now</a>
+      </div>
+    </div>
+    <br> <br> <br>
+    <div class="container"> 
+      <div class="row "> 
+        <div class="col-lg-3 offset-lg-9 col-md-4 offset-md-8 col-sm-5 offset-sm-7">
+          <a
+            class="text-start checknow my-3 muli "
+            href="/Team.html"
+           role="button"
+          >
+           Check Now <img class="arrow" src="/Asset/images/arrow-navy.png" alt=""> </a
+          >
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <div
         class="row d-flex justify-content-center align-items-center row-meat"
       >
-        <div class="col-8 row">
-          <div class="col-2"></div>
-          <div class="col-6">
+        <div class="col-10 col-sm-12 offset-lg-2 offset-md-1 row">
+          <div class="col-6 col-sm-10 offset-lg-1">
             <div class="row align-items-center fw-bold">
-              <div class="col-2">
+              <div class="col-lg-1 col-md-2 col-sm-2 offset-sm-2">
                 <div class="hr"></div>
               </div>
-              <div class="col-8 text-center weare">Latest Blogs</div>
-              <div class="col-2">
+              <div class="col-lg-3 col-md-4 col-sm-6 text-center weare">
+                Latest Blogs
+              </div>
+              <div class="col-lg-1 col-md-2 col-sm-2">
                 <div class="hr"></div>
               </div>
             </div>
           </div>
-          <div class="col-2"></div>
         </div>
       </div>
     </div>
     <div class="container cardhome">
       <div
         class="row d-flex justify-content-center align-items-center"
-        style="height: 50vh"
+       
       >
-        <div class="col-11 row" style="height: 50vh">
-          <div class="col-4 d-flex justify-content-center align-items-start">
+        <div class="col-10 row" >
+          <div
+            class="col-lg-4 mb-5 d-flex justify-content-center align-items-start"
+          >
             <div style="width: 18rem">
               <img
                 src="/Asset/images/img_article.jpg"
@@ -371,7 +377,9 @@
               </div>
             </div>
           </div>
-          <div class="col-4 d-flex justify-content-center align-items-start">
+          <div
+            class="col-lg-4 mb-5 d-flex justify-content-center align-items-start"
+          >
             <div style="width: 18rem">
               <img
                 src="/Asset/images/img_article.jpg"
@@ -406,7 +414,9 @@
               </div>
             </div>
           </div>
-          <div class="col-4 d-flex justify-content-center align-items-start">
+          <div
+            class="col-lg-4 mb-5 d-flex justify-content-center align-items-start"
+          >
             <div style="width: 18rem">
               <img
                 src="/Asset/images/img_article.jpg"
@@ -445,18 +455,16 @@
       </div>
     </div>
     <div class="container-fluid footer">
-      <div class="container">
         <div class="row">
-          <div class="col-4 d-flex align-items-center">
+          <div class="col-lg-1 offset-lg-2 col-md-3 col-sm-4 d-flex align-items-center" style="padding-left: 20px">
             <img
               class="logobawah"
               src="/Asset/images/logo-ALTA-v2@2x.png"
               alt=""
             />
           </div>
-          <div class="col-4 row text-start paddingfooter align-items-center">
-            <div class="col-4"></div>
-            <div class="col-8">
+          <div class="col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-sm-4 row text-start paddingfooter align-items-center">
+            <div class="col-lg-8 col-md-10 col-sm-12 offset-lg-4">
               <div style="color: white; font-family: Arial; font-size: 14px">
                 Social Media
               </div>
@@ -486,18 +494,15 @@
               </div>
             </div>
           </div>
-          <div class="col-4 row paddingfooter text-end align-items-center">
+          <div class="col-lg-3 offset-lg-1- col-md-3 offset-md-1 col-sm-4 row paddingfooter align-items-center">
             <div style="color: white; font-family: Arial; font-size: 14px">
               <span>Copyright © 2019 Alterra</span>
             </div>
           </div>
         </div>
-      </div>
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qsYSDhgCecCxMW52nD2"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-  </body>
 </html>
