--- a/Team.html
+++ b/Team.html
@@ -4,41 +4,295 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Asset/css/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" href="/Asset/css/home.css" />
-    <title>Team</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" />
+    <title>Blog</title>
   </head>
-  <body>    
+  <body>
     <nav class="navbar navbar-expand-lg bg-white">
-    <div class="container">
-      <a class="navbar-brand" href="/Home.html"> <img class="lgatskr" src="/Asset/images/logo-ALTA@2x.png" alt=""></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link anavbar" href="/Home.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link anavbar" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link anavbar" href="/Team.html">Team</a>
-        </li><li class="nav-item">
-          <a class="nav-link anavbar" href="/Blog.html">Blog</a>
-        </li>
-        <li><a class="btn btn-primary buttoncontact" href="/Contact.html" role="button">Contact</a></li>
-      </ul>
+      <div class="container">
+        <a class="navbar-brand" href="#"> 
+          <img class="image" src="Asset/images/logo-ALTA@2x.png" width="150px">
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link anavbar" href="/Home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link anavbar" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link anavbar" href="/Team.html">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link anavbar" href="/Blog.html">Blog</a>
+          </li>
+          <div class="#">
+          <li><a class="btn btn-primary buttoncontact" href="/Contact.html" role="button">Contact</a></li>
+        </ul>
       </div>
+      </nav>
+      
+      <div class="container" id="about">
+        <div class="text-center">
+          <h1 class="display-6 mt-5 mb-5">
+            <span class="strip-oren">—</span>
+            About Our Team
+            <span class="strip-oren">—</span>
+          </h1>
+        </div>
+
+      <div class="container">
+        <h4 class="display-10">Backend Developer</h4>
+      </div>
+      
+          <div class="description">
+          <p><img src="Asset/images/shutterstock_796346011@2x.png" 
+            alt="logo-alta" 
+            style="float:left" 
+            class="border">
+          </p>
+            <table class="decoration">
+            <tr>
+              <td><p>First Name</p></td>
+              <td><p>: Cindy</p></td>
+            </tr>
+            <tr>
+              <td><p>Last Name</p></td>
+              <td><p>: Felita</p></td>
+            </tr>
+            <tr>
+              <td><p>Birthdate</p></td>
+              <td><p>: 30 Juni 1995</p></td>
+            </tr>
+            <tr>
+              <td><p>Nationality</p></td>
+              <td><p>: Indonesia</p></td>
+            </tr>
+            <tr>
+              <td><p>Address</p></td>
+              <td><p>: Malang</p></td>
+            </tr>
+            <tr>
+              <td><p>Email</p></td>
+              <td><p>: cindy@alterra.id</p></td>
+            </tr>
+            <tr>
+              <td><p>Phone</p></td>
+              <td><p>: 0857444666555</p></td>
+            </tr>
+          </table>
+        </p>
     </div>
-  </nav>
-</body>
-</html>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <h3 class="display-10 mb-5">Education</h3>
+          <ul>
+            <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2007 - 2010</li>
+          <p><strong>Istanbul University</strong></p>
+          <p>Engineering Degree</p>
+          </ul>
+          <ul>
+            <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2005 - 2007</li>
+          <p><strong>Paris University</strong></p>
+          <p>Masters Degree</p>
+          </ul>
+          <ul>
+            <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2001 - 2005 </li>
+          <p><strong>Moscow Hight School</strong></p>
+          <p>Bachelor Degree</p>
+          </ul>
+        </div>
+      <div class="col-md-6">
+          <h3 class="display-10 mb-5">Experience</h3>
+          <ul>
+            <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2018 - 2020</li>
+          <p><strong>Alterra Group</strong></p>
+          <p>Backend Developer</p>
+          </ul>
+          <ul>
+            <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2015 - 2018</li>
+          <p><strong>Traveloka</strong></p>
+          <p>Frontend Developer</p>
+          </ul>
+          <ul>
+            <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2012 - 2015</li>
+          <p><strong>Bukalapak</strong></p>
+          <p>Quality Engineer</p>
+          </ul>
+        </div>
+       </div>
+      </div>
+    <hr>
+
+       <div class="container text-left">
+        <h4 class="display-10">Frontend Developer</h4>
+      </div>
+      <div class="description">
+        <p><img src="Asset/images/shutterstock_796346011@2x.png" alt="logo-alta" style="float:left">
+        <table class="decoration">
+          <tr>
+            <td><p>First Name</p></td>
+            <td><p>: Winda</p></td>
+          </tr>
+          <tr>
+            <td><p>Last Name</p></td>
+            <td><p>: Pramesti</p></td>
+          </tr>
+          <tr>
+            <td><p>Birthdate</p></td>
+            <td><p>: 30 Juni 1995</p></td>
+          </tr>
+          <tr>
+            <td><p>Nationality</p></td>
+            <td><p>: Indonesia</p></td>
+          </tr>
+          <tr>
+            <td><p>Address</p></td>
+            <td><p>: Malang</p></td>
+          </tr>
+          <tr>
+            <td><p>Email</p></td>
+            <td><p>: winda@alterra.id</p></td>
+          </tr>
+          <tr>
+            <td><p>Phone</p></td>
+            <td><p>: 0857444666555</p></td>
+          </tr>
+        </table>
+       </p>
+      </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 mb-3">
+      <h3 class="display-10 mb-5">Education</h3>
+      <ul>
+        <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2007 - 2010</li>
+        <p><strong>Istanbul University</strong></p>
+        <p>Engineering Degree</p>
+      </ul>
+      <ul>
+        <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2005 - 2007</li>
+      <p><strong>Paris University</strong></p>
+      <p>Masters Degree</p>
+      </ul>
+      <ul>
+        <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2001 - 2005</li>
+      <p><strong>Moscow Hight School</strong></p>
+      <p>Bachelor Degree</p>
+      </ul>
+    </div>
+
+    <div class="col-md-6">
+      <h3 class="display-10 mb-5">Experience</h3>
+      <ul>
+        <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2018 - 2020</li>
+      <p><strong>Alterra Group</strong></p>
+      <p>Frontend Developer</p>
+      </ul>
+      <ul>
+        <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2015 - 2018</li>
+      <p><strong>PegiPegi</strong></p>
+      <p>Frontend Developer</p>
+      </ul>
+      <ul>
+        <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2012 - 2015</li>
+      <p><strong>OLX</strong></p>
+      <p>WEB Designer</p>
+      </ul>  
+    </div>
+  <hr>
+
+<div class="container text-left">
+  <h4 class="display-10">UI UX Designer</h4>
+</div>
+<div class="description">
+  <p><img src="Asset/images/shutterstock_796346011@2x.png" alt="logo-alta" style="float:left">
+  <table class="decoration">
+    <tr>
+      <td><p>First Name</p></td>
+      <td><p>: Aulia</p></td>
+    </tr>
+    <tr>
+      <td><p>Last Name</p></td>
+      <td><p>: Rahmani</p></td>
+    </tr>
+    <tr>
+      <td><p>Birthdate</p></td>
+      <td><p>: 30 Juni 1995</p></td>
+    </tr>
+    <tr>
+      <td><p>Nationality</p></td>
+      <td><p>: Indonesia</p></td>
+    </tr>
+    <tr>
+      <td><p>Address</p></td>
+      <td><p>: Malang</p></td>
+    </tr>
+    <tr>
+      <td><p>Email</p></td>
+      <td><p>: aulia@alterra.id</p></td>
+    </tr>
+    <tr>
+      <td><p>Phone</p></td>
+      <td><p>: 0857444666555</p></td>
+    </tr>
+  </table>
+ </p>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 mb-3">
+  <h3 class="display-10 mb-5">Education</h3>
+  <ul>
+   <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2007 - 2010</li>
+    <p><strong>Istanbul University</strong></p>
+    <p>Engineering Degree</p>
+  </ul>
+  <ul>
+    <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2005 - 2007</li>
+    <p><strong>Paris University</strong></p>
+    <p>Masters Degree</p>
+  </ul>
+  <ul>
+    <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2001 - 2005</li>
+    <p><strong>Moscow Hight School</strong></p>
+    <p>Bachelor Degree</p>
+  </ul>
+</div>
+
+<div class="col-md-6">
+    <h3 class="display-10 mb-5">Experience</h3>
+    <ul>
+      <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2018 - 2020</li>
+      <p><strong>Alterra Group</strong></p>
+      <p>UI UX Designer</p>
+    </ul>
+    <ul>
+      <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2015 - 2018</li>
+      <p><strong>Twitter</strong></p>
+      <p>UX Designer</p>
+    </ul>
+    <ul>
+      <li><img src="asset/images/calendar.png" alt="image" height="20px"> 2012 - 2015</li>
+      <p><strong>Google</strong></p>
+      <p>Designer</p>
+    </ul>
+   </div>
+  </body>
+</html> 
